# micropython

./: .gitignore  CMakeLists.txt  Kconfig  frozen_content.c
genhdr/: compressed.collected  compressed.collected.hash  compressed.data.h  mpversion.h  qstrdefs.collected.h  qstrdefs.collected.h.hash  qstrdefs.generated.h  qstrdefs.preprocessed.h
genhdr/compress/: @@__@@__extmod__machine_i2c.c.compress  @@__@@__extmod__modbluetooth.c.compress  @@__@@__py__objobject.c.compress
genhdr/qstr/: @@__@@__extmod__modbluetooth.c.qstr  @@__@@__extmod__moduasyncio.c.qstr  @@__@@__py__objmodule.c.qstr  @@__@@__py__objtype.c.qstr  modnetwork.c.qstr
ports/esp32/: main.c  makefile  mpconfigport.h
py/: mkrules.mk
