set(srcs
    "lib/mbedtls_errors/mp_mbedtls_errors.c"
    "lib/mp-readline/readline.c"
    "lib/netutils/netutils.c"
    "lib/timeutils/timeutils.c"
    "lib/utils/pyexec.c"
    "lib/utils/interrupt_char.c"
    "lib/utils/sys_stdio_mphal.c"
    "lib/oofatfs/ff.c"
    "lib/oofatfs/ffunicode.c"
    "lib/littlefs/lfs2.c"
    "lib/littlefs/lfs2_util.c"    
    
    "ports/esp32/main.c"
    "ports/esp32/uart.c"
    "ports/esp32/gccollect.c"
    "ports/esp32/mphalport.c"
    "ports/esp32/help.c"
    "ports/esp32/modutime.c"
    "ports/esp32/moduos.c"
    "ports/esp32/machine_timer.c"
    "ports/esp32/machine_pin.c"
    "ports/esp32/machine_touchpad.c"
    "ports/esp32/machine_adc.c"
    "ports/esp32/machine_dac.c"
    "ports/esp32/machine_i2c.c"
    "ports/esp32/machine_pwm.c"
    "ports/esp32/machine_uart.c"
    "ports/esp32/modmachine.c"
    "ports/esp32/modnetwork.c"
    "ports/esp32/network_lan.c"
    "ports/esp32/network_ppp.c"
    "ports/esp32/nimble.c"
    "ports/esp32/modsocket.c"
    "ports/esp32/modesp.c"
    "ports/esp32/esp32_partition.c"
    "ports/esp32/esp32_rmt.c"
    "ports/esp32/esp32_ulp.c"
    "ports/esp32/modesp32.c"
    "ports/esp32/espneopixel.c"
    "ports/esp32/machine_hw_spi.c"
    "ports/esp32/machine_wdt.c"
    "ports/esp32/mpthreadport.c"
    "ports/esp32/machine_rtc.c"
    "ports/esp32/machine_sdcard.c"

    "extmod/nimble/modbluetooth_nimble.c"

    "extmod/modonewire.c"

    "drivers/bus/softspi.c"
    "drivers/dht/dht.c"

    "py/mpstate.c"
    "py/nlr.c"
    "py/nlrx86.c"
    "py/nlrx64.c"
    "py/nlrthumb.c"
    "py/nlrpowerpc.c"
    "py/nlrxtensa.c"
    "py/nlrsetjmp.c"
    "py/malloc.c"
    "py/gc.c"
    "py/pystack.c"
    "py/qstr.c"
    "py/vstr.c"
    "py/mpprint.c"
    "py/unicode.c"
    "py/mpz.c"
    "py/reader.c"
    "py/lexer.c"
    "py/parse.c"
    "py/scope.c"
    "py/compile.c"
    "py/emitcommon.c"
    "py/emitbc.c"
    "py/asmbase.c"
    "py/asmx64.c"
    "py/emitnx64.c"
    "py/asmx86.c"
    "py/emitnx86.c"
    "py/asmthumb.c"
    "py/emitnthumb.c"
    "py/emitinlinethumb.c"
    "py/asmarm.c"
    "py/emitnarm.c"
    "py/asmxtensa.c"
    "py/emitnxtensa.c"
    "py/emitinlinextensa.c"
    "py/emitnxtensawin.c"
    "py/formatfloat.c"
    "py/parsenumbase.c"
    "py/parsenum.c"
    "py/emitglue.c"
    "py/persistentcode.c"
    "py/runtime.c"
    "py/runtime_utils.c"
    "py/scheduler.c"
    "py/nativeglue.c"
    "py/pairheap.c"
    "py/ringbuf.c"
    "py/stackctrl.c"
    "py/argcheck.c"
    "py/warning.c"
    "py/profile.c"
    "py/map.c"
    "py/obj.c"
    "py/objarray.c"
    "py/objattrtuple.c"
    "py/objbool.c"
    "py/objboundmeth.c"
    "py/objcell.c"
    "py/objclosure.c"
    "py/objcomplex.c"
    "py/objdeque.c"
    "py/objdict.c"
    "py/objenumerate.c"
    "py/objexcept.c"
    "py/objfilter.c"
    "py/objfloat.c"
    "py/objfun.c"
    "py/objgenerator.c"
    "py/objgetitemiter.c"
    "py/objint.c"
    "py/objint_longlong.c"
    "py/objint_mpz.c"
    "py/objlist.c"
    "py/objmap.c"
    "py/objmodule.c"
    "py/objobject.c"
    "py/objpolyiter.c"
    "py/objproperty.c"
    "py/objnone.c"
    "py/objnamedtuple.c"
    "py/objrange.c"
    "py/objreversed.c"
    "py/objset.c"
    "py/objsingleton.c"
    "py/objslice.c"
    "py/objstr.c"
    "py/objstrunicode.c"
    "py/objstringio.c"
    "py/objtuple.c"
    "py/objtype.c"
    "py/objzip.c"
    "py/opmethods.c"
    "py/sequence.c"
    "py/stream.c"
    "py/binary.c"
    "py/builtinimport.c"
    "py/builtinevex.c"
    "py/builtinhelp.c"
    "py/modarray.c"
    "py/modbuiltins.c"
    "py/modcollections.c"
    "py/modgc.c"
    "py/modio.c"
    "py/modmath.c"
    "py/modcmath.c"
    "py/modmicropython.c"
    "py/modstruct.c"
    "py/modsys.c"
    "py/moduerrno.c"
    "py/modthread.c"
    "py/vm.c"
    "py/bc.c"
    "py/showbc.c"
    "py/repl.c"
    "py/smallint.c"
    "py/frozenmod.c"

    "extmod/moduasyncio.c" 
    "extmod/moductypes.c" 
    "extmod/modujson.c" 
    "extmod/modure.c" 
    "extmod/moduzlib.c" 
    "extmod/moduheapq.c" 
    "extmod/modutimeq.c" 
    "extmod/moduhashlib.c" 
    "extmod/moducryptolib.c" 
    "extmod/modubinascii.c" 
    "extmod/virtpin.c" 
    "extmod/machine_mem.c" 
    "extmod/machine_pinbase.c" 
    "extmod/machine_signal.c" 
    "extmod/machine_pulse.c" 
    "extmod/machine_i2c.c" 
    "extmod/machine_spi.c" 
    "extmod/modbluetooth.c" 
    "extmod/modussl_axtls.c" 
    "extmod/modussl_mbedtls.c" 
    "extmod/modurandom.c" 
    "extmod/moduselect.c" 
    "extmod/moduwebsocket.c" 
    "extmod/modwebrepl.c" 
    "extmod/modframebuf.c" 
    "extmod/vfs.c" 
    "extmod/vfs_blockdev.c" 
    "extmod/vfs_reader.c" 
    "extmod/vfs_posix.c" 
    "extmod/vfs_posix_file.c" 
    "extmod/vfs_fat.c" 
    "extmod/vfs_fat_diskio.c" 
    "extmod/vfs_fat_file.c" 
    "extmod/vfs_lfs.c" 
    "extmod/utime_mphal.c" 
    "extmod/uos_dupterm.c" 
    "lib/embed/abort_.c" 
    "lib/utils/printf.c"

    "${COMPONENT_DIR}/ports/esp32/build-GENERIC/frozen_content.c"
)

file(MAKE_DIRECTORY ports/esp32/build-GENERIC)
file(MAKE_DIRECTORY ports/esp32/build-GENERIC/genhdr)

set(includes
    "./"
    "ports/esp32"
    "ports/esp32/boards/GENERIC"
    "lib/timeutils"
    "lib/netutils"
    "lib/mp-readline"
    "ports/esp32/build-GENERIC/genhdr"
    "ports/esp32/build-GENERIC"
    )

idf_component_register(SRCS "${srcs}"
                       INCLUDE_DIRS ${includes}
                       REQUIRES mbedtls ulp app_update fatfs mdns nvs_flash bt micropython_overrides)

target_compile_options(${COMPONENT_LIB} PRIVATE
        -DMICROPY_VFS_FAT
        -DMICROPY_PY_BLUETOOTH=1
        -DMICROPY_BLUETOOTH_NIMBLE=1
        -DFFCONF_H=\"lib/oofatfs/ffconf.h\"
        -DMICROPY_ESP_IDF_4=1
        -DMICROPY_VFS_LFS2=1 -DLFS2_NO_MALLOC -DLFS2_NO_DEBUG -DLFS2_NO_WARN -DLFS2_NO_ERROR -DLFS2_NO_ASSERT)

add_custom_command(
    OUTPUT ${COMPONENT_DIR}/ports/esp32/build-GENERIC/frozen_content.c
    COMMAND echo extmods: ${EXTMODS} && make clean && make build-GENERIC/frozen_content.c SRC_MOD=/"${EXTMODS}/"
    WORKING_DIRECTORY ${COMPONENT_DIR}/ports/esp32
)